# LoggerProject

./: CMakeLists.txt  README.md  build_project.bat
ExampleApp/: CMakeLists.txt  main.cc
LoggerTests/: CMakeLists.txt  test.cpp
include/: LogLevel.hpp  Logger.hpp
loggerLib/: CMakeLists.txt
loggerLib/include/: FileLogger.hpp  Logger.hpp
loggerLib/src/: FileLogger.cpp  LogLevel.cpp
src/: FileLogger.cpp  FileLogger.hpp  LogLevel.cpp  LogLevel.hpp  Loger.hpp
